style the app with bootstrap and css,Also apply DRY principle by using extention in django

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wp Blog</title>
-</head>
-<body>
-    <h1><a href="#">WP BLOG</a> </h1>
-    {% for post in posts %}
-        <div>
-             <p>Published: {{ post.published_date}} </p>
-           <a href="{% url 'post_detail' pk=post.pk %}">  <h1>{{ post.title}}</h1></a>
-            <p> {{ post.text|linebreaksbr}} </p>
-        </div>
-    {% endfor %}
-</body>
-</html>
+{% extends 'blog/base.html' %} {% block content%} {% for post in posts %}
+<div class="post">
+  <div class="date">
+    <p>
+      <em> Published: {{ post.published_date }} </em>
+    </p>
+  </div>
+  <h1>
+    <a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>
+  </h1>
+  <p>{{ post.text | linebreaksbr }}</p>
+</div>
+{% endfor %} {% endblock %}
