--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Blog</title>
-</head>
-<body>
-    
-    {% if post.published_date %}
-   <div>
-       published: {{post.published_date}}
-   </div>
-   {% endif %}
-   <h1>{{post.title}} </h1>
-   <p>{{post.text|linebreaksbr}}</p>
+{% extends 'blog/base.html' %} {% block content%} {% if post.published_date %}
+<div class="post">
+  <div class="date">
+    <p>Published: {{ post.published_date }}</p>
+  </div>
 
-</body>
-</html>
+  {% endif %}
+
+  <h1>{{ post.title }}</h1>
+  <p>{{ post.text | linebreaksbr }}</p>
+</div>
+
+{% endblock %}
