Add feature to create new blog post from frontend

--- a/blog/static/styles/blog.css
+++ b/blog/static/styles/blog.css
@@ -34,3 +34,11 @@ h4 {
 .post h1 a:visited {
   color;
 }
+
+.post-form-blog textarea {
+    width: 100%;
+}
+
+.post-form-blog .btn-primary{
+float: right;
+}
