--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,11 +16,20 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="{% static 'styles/blog.css' %}" />
   </head>
   <body>
     <div class="page-header">
-      <h1><a href="{% url 'post_list'%}">Wise Programmer BLOG</a></h1>
+      {% if user.is_authenticated %}
+      <a href="{% url 'post_new'%}"><i class="fa fa-plus"></i></a>
+      {% endif %}
+      <h1><a href="{% url 'post_list'%}">Wise Programmer Blog</a></h1>
     </div>
 
     <div class="content container">
