--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,6 +4,10 @@
     <p>Published: {{ post.published_date }}</p>
   </div>
 
+  {% endif %} {% if user.is_authenticated %}
+  <a href="{% url 'post_edit' pk=post.pk %}"
+    ><i class="fa fa-edit" style="color: #339af0;"></i
+  ></a>
   {% endif %}
 
   <h1>{{ post.title }}</h1>
