--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,17 +16,13 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'styles/blog.css' %}" />
   </head>
   <body>
     <div class="page-header">
       {% if user.is_authenticated %}
+      <a href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa"></i></a>
       <a href="{% url 'post_new'%}"><i class="fa fa-plus"></i></a>
       {% endif %}
       <h1><a href="{% url 'post_list'%}">Wise Programmer Blog</a></h1>
