--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,11 +3,12 @@
   <div class="date">
     <p>Published: {{ post.published_date }}</p>
   </div>
+  {% else %}
+  <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-primary">Publish</a>
 
-  {% endif %} {% if user.is_authenticated %}
-  <a href="{% url 'post_edit' pk=post.pk %}"
-    ><i class="fa fa-edit" style="color: #339af0;"></i
-  ></a>
+  {% endif %}
+  {% if user.is_authenticated %}
+  <a href="{% url 'post_edit' pk=post.pk %}"><i class="fa fa-edit" style="color: #339af0;"></i></a>
   {% endif %}
 
   <h1>{{ post.title }}</h1>
