--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,6 @@
-{% extends 'blog/base.html' %} {% block content%} {% for post in posts %}
+{% extends 'blog/base.html' %}
+{% block content%}
+{% for post in posts %}
 <div class="post">
   <div class="date">
     <p>
@@ -8,6 +10,6 @@
   <h1>
     <a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>
   </h1>
-  <p>{{ post.text | linebreaksbr }}</p>
+  <p>{{ post.text | truncatechars:50| linebreaksbr }}</p>
 </div>
 {% endfor %} {% endblock %}
