Add login Functionality

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,7 @@
-{% extends 'blog/base.html' %} {% block content%} {% if post.published_date %}
+{% extends 'blog/base.html' %}
+{% block title%}  {{post.title}}  {% endblock%}
+{% block content%}
+{% if post.published_date %}
 <div class="post">
   <div class="date">
     <p>Published: {{ post.published_date }}</p>
