--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Wp Blog</title>
+    <title>{% block title%} {% endblock%} </title>
     <link
       href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap"
       rel="stylesheet"
@@ -24,6 +24,11 @@
       {% if user.is_authenticated %}
       <a href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa"></i></a>
       <a href="{% url 'post_new'%}"><i class="fa fa-plus"></i></a>
+
+      {% else %}
+
+              <a href="{% url 'login'%}"><i class="fas fa-sign-in-alt fa"></i></a>
+
       {% endif %}
       <h1><a href="{% url 'post_list'%}">Wise Programmer Blog</a></h1>
     </div>
