--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% block title%} My Draft Posts {% endblock%}
     {% block content%}
         {% for post in posts %}
             <div class="post">
