--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,4 +1,7 @@
-{% extends 'blog/base.html' %} {% block content%}
+{% extends 'blog/base.html' %}
+{% block title%} {{ post.title }} {% endblock%}
+
+{% block content%}
 
 <h1>New post</h1>
 <form method="POST" class="post-form-blog">
