--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,16 +22,24 @@
   <body>
     <div class="page-header">
       {% if user.is_authenticated %}
-      <a href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa"></i></a>
-      <a href="{% url 'post_new'%}"><i class="fa fa-plus"></i></a>
+
+      <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="fas fa-pencil-ruler fa"></i>|</a>
+      <a href="{% url 'post_new'%}" class="top-menu"><i class="fa fa-plus"></i>|</a>
+      <a href="{% url 'logout'%}" class="top-menu"><i class="fas fa-sign-out-alt fa"></i>Logout |</a>
+      <p class="top-menu"> Hi,{{ user.username}}|</p>
+
+
 
       {% else %}
 
-              <a href="{% url 'login'%}"><i class="fas fa-sign-in-alt fa"></i></a>
+              <a href="{% url 'login'%}" class="top-menu"><i class="fas fa-sign-in-alt fa"></i> login</a>
 
       {% endif %}
       <h1><a href="{% url 'post_list'%}">Wise Programmer Blog</a></h1>
+
     </div>
+
+
 
     <div class="content container">
       <div class="row">
