--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,7 @@
   <div class="date">
     <p>Published: {{ post.published_date }}</p>
   </div>
-  {% else %}
+  {% else %}s
   <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-primary">Publish</a>
 
   {% endif %}
@@ -16,6 +16,20 @@
 
   <h1>{{ post.title }}</h1>
   <p>{{ post.text | linebreaksbr }}</p>
-</div>
+  </div>
+<a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-light" >Add Comment</a>
+  <hr>
+  {% for comment in post.comments.all %}
+<div class="comment">
+  <div class="date">
+    {{comment.created_date}}
+  </div>
+    <strong><p> {{comment.author}} </p></strong>
+    <p> {{comment.text}} </p>
+  </div>
+
+  {% empty %}
+  <p>No comment yet...</p>
+  {% endfor %}
 
 {% endblock %}
