--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,9 +16,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'styles/blog.css' %}" />
-    <link rel="stylesheet" href="{% static 'styles/zenburn.css'%}">
+    <link rel="stylesheet" href="{% static 'styles/zenburn.css' %}">
   </head>
   <body>
     <div class="page-header">
