--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load markdownify %}
 {% block title%} My Blog {% endblock%}
 {% block content%}
 {% for post in posts %}
@@ -11,8 +12,13 @@
   <h1>
     <a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>
   </h1>
-  <p>{{ post.text | truncatechars:50| linebreaksbr }}</p>
+  <div>
+    <p>{{ post.text |markdown | safe| truncatechars:50| linebreaksbr }}</p>
+  </div>
 
+<div>
   <a href="{% url 'post_detail' pk=post.pk%}">Comments: {{ post.approved_comments.count }}</a>
+</div>
+
 </div>
 {% endfor %} {% endblock %}
