--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,8 +12,14 @@
 
   {% endif %}
   {% if user.is_authenticated %}
-  <a href="{% url 'post_edit' pk=post.pk %}"><i class="fa fa-edit" style="color: #339af0;"></i></a>
+    <a href="{% url 'post_edit' pk=post.pk %}"><i class="fa fa-edit" style="color: #339af0;"></i></a>
   {% endif %}
+    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
+        <i class="fas fa-trash-alt" ></i>
+    </a>
+
+
+
 
   <h1>{{ post.title }}</h1>
   <p>{{ post.text | markdown | safe }}</p>
