--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,14 @@
 {% extends 'blog/base.html' %}
 {% load markdownify %}
 {% block title%} My Blog {% endblock%}
+{% block nav %}
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa">view drafts</i></a>
+</li>
+{% endblock%}
 {% block content%}
 {% for post in posts %}
     <div class="post">
@@ -20,4 +28,64 @@
         <a href="{% url 'post_detail' pk=post.pk%}">Comments: {{ post.approved_comments.count }}</a>
       </div>
     </div>
-{% endfor %} {% endblock %}
+{% endfor %}
+
+{% for post in search_result %}
+<div class="post">
+    <div class="date">
+        <p><em> Published: {{ post.published_date }} </em></p>
+    </div>
+    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+
+    <div>
+        <p>{{ post.text |markdown | safe| truncatechars:50| linebreaksbr }}</p>
+    </div>
+
+    <hr>
+
+    <div>
+        <a href="{% url 'post_detail' pk=post.pk%}">Comments: {{ post.approved_comments.count }}</a>
+    </div>
+</div>
+
+
+{% endfor %}
+
+
+
+
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
