--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,100 +21,90 @@
 
     <link rel="stylesheet" href="{% static 'styles/blog.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/zenburn.css' %}">
-    <title>{% block title%} {% endblock%} </title>
+    <title>{% block title %} {% endblock%} </title>
   </head>
   <body>
-
-  <nav class="navbar sticky-top navbar-expand-md bg-light navbar-light  ">
-    <h1><a class="navbar-brand" href="{% url 'post_list'%}"><i class="fas fa-home"></i>Wise Programmer<br>Blog</a></h1>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+  <nav class="navbar sticky-top navbar-expand-md bg-light navbar-light ">
+    <div class="container-fluid">
+      <!-- Logo -->
+      <div class="navbar-header">
+        <h1> <a class="navbar-brand" href="{% url 'post_list'%}"><i class="fas fa-home"></i>Wise Programmer<br>Blog</a> </h1>
+      </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse " id="collapsibleNavbar">
-    {% if user.is_authenticated %}
-
-      <ul class="navbar-nav">
-
-
-        <li class="nav-item">
-
-        </li>
-      </ul>
-
-      {% endif %}
-
-    </div>
-    <div class="collapse navbar-collapse " id="collapsibleNavbar">
-    <form class="form-inline my-2 my-lg-0  ">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search a post" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-    {% if user.is_authenticated %}
-  <div class="collapse navbar-collapse " id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa">view drafts</i></a>
-      </li>
-        <li class="nav-item">
-          <div class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <p class="nav-link"> <i class="far fa-user"></i><br>{{ user.username}}</p>
-              <div class="dropdown-divider"></div>
-              <a class="nav-link" href="{% url 'logout'%}"><i class="fas fa-sign-out-alt fa"></i>Logout</a>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="nav navbar-nav ml-auto">
+          <form method="get" action="{%url 'search' %}" class="form-inline my-2 my-lg-0  ">
+            <div class="input-group mb-3">
+              <input type="search" name="query" value="{{request.GET.query}}" class="form-control" placeholder="Search post" aria-label="Search post" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="submit">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
             </div>
-          </div>
-        </li>
-    </ul>
-  </div>
+          </form>
+
+
+
+        </ul>
+      </div>
+
+      {% if user.is_authenticated %}
+
+      <div class="collapse navbar-collapse " id="collapsibleNavbar">
+        <ul class="nav navbar-nav ml-auto">
+          {% block nav %} {% endblock%}
+          <li class="nav-item">
+            <div class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <p class="nav-link"> <i class="far fa-user"></i><br>{{ user.username}}</p>
+                <div class="dropdown-divider"></div>
+                <a class="nav-link" href="{% url 'logout'%}"><i class="fas fa-sign-out-alt fa"></i>Logout</a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
 
     {% else %}
+
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <div class="nav-item dropdown">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'login'%}" ><i class="fas fa-sign-in-alt fa"></i> login</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{% url 'login'%}" >
+                <i class="fas fa-sign-in-alt fa"></i>
+                login
+              </a>
+              <div class="dropdown-divider"></div>
+              <h6 class="dropdown-header">Don`t have an account ?</h6>
               <a class="dropdown-item" href="{% url 'signup'%}" ><i class="fas fa-user-plus"></i> Signup</a>
             </div>
-          </div>
         </li>
       </ul>
     </div>
       {% endif %}
+    </div>
   </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   <div class="content container-fluid">
       <div class="row">
         <div class="col-md-8">
+          {% for message in messages %}
+  <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    {{ message }}
+  </div>
+{% endfor %}
           {% block content%} {%endblock%}
+
         </div>
       </div>
     </div>
