--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,14 +21,18 @@
 
     <link rel="stylesheet" href="{% static 'styles/blog.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/zenburn.css' %}">
-    <title>{% block title %} {% endblock%} </title>
+    <link rel="icon" href="static/images/icon.png" sizes="32x32" type="image/png">
+
+    <title>
+      {% block title %} {% endblock%}
+    </title>
   </head>
   <body>
   <nav class="navbar sticky-top navbar-expand-md bg-light navbar-light ">
     <div class="container-fluid">
       <!-- Logo -->
       <div class="navbar-header">
-        <h1> <a class="navbar-brand" href="{% url 'post_list'%}"><i class="fas fa-home"></i>Wise Programmer<br>Blog</a> </h1>
+        <h1> <a class="navbar-brand" href="{% url 'post_list'%}"><i class="fas fa-feather-alt"></i></i>Wise Programmer Blog</a> </h1>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -46,9 +50,6 @@
               </div>
             </div>
           </form>
-
-
-
         </ul>
       </div>
 
@@ -92,18 +93,25 @@
     </div>
   </nav>
 
-  <div class="content container-fluid">
+  <div class="container">
+    <br>
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-6">
           {% for message in messages %}
+          <div class="panel panel-default" style="width:auto; margin:0 auto;">
   <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
     {{ message }}
+    </div>
   </div>
 {% endfor %}
-          {% block content%} {%endblock%}
+
+          {% block content%}
+
+          {%endblock%}
 
         </div>
       </div>
