--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,33 +2,36 @@
 {% load markdownify %}
 {% block title%}  {{post.title}}  {% endblock%}
 {% block content%}
+
 {% if post.published_date %}
 <div class="post">
-  <div class="date">
-    <p>Published: {{ post.published_date }}</p>
-  </div>
-  {% else %}
-  <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-primary">Publish</a>
+    <div class="date">
+        <p>Published: {{ post.published_date }}</p>
+    </div>
+    {% else %}
+    <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    {% endif %}
+    {% if user.is_authenticated %}
 
-  {% endif %}
-  {% if user.is_authenticated %}
-    <a href="{% url 'post_edit' pk=post.pk %}"><i class="fa fa-edit" style="color: #339af0;"></i></a>
-  {% endif %}
-    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
-        <i class="fas fa-trash-alt" ></i>
+    <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-light"><i class="fa fa-edit" style="color:black;"> Edit</i></a>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
+        <i class="fas fa-trash-alt" > Delete</i>
     </a>
+    <hr>
+     {% endif %}
 
-
-
-
-  <h1>{{ post.title }}</h1>
-  <p>{{ post.text | markdown | safe }}</p>
-  </div>
+    <h1>{{ post.title }}</h1>
+    <p>{{ post.text | markdown | safe }}</p>
+</div>
+{% if  post.published_date %}
 <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-light" >Add Comment</a>
-  <hr>
+{% endif %}
+<hr>
   {% for comment in post.comments.all %}
       {% if user.is_authenticated or comment.approved %}
-          <div class="comment">
+            <div class="comment">
               <div class="date">
                     {{comment.created_date}}
               </div>
@@ -43,9 +46,10 @@
                 <p> {{comment.text | markdown | safe |linebreaksbr}} </p>
           </div>
       {% endif %}
-      {% empty %}
-      <p>No comment yet...</p>
-{% endfor %}
 
+      {% empty %}
+{% if  post.published_date %}
+<p>No comment yet...</p>
+{% endif %}
+{% endfor %}
 {% endblock %}
-s
