--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block title%} {{ post.title }} {% endblock%}
+{% load crispy_forms_tags %}
 {% block nav %}
 <li class="nav-item active">
     <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
@@ -9,12 +10,12 @@
 </li>
 {% endblock%}
 {% block content%}
-
-<h1>New post</h1>
-<form method="POST" class="post-form-blog">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" class="btn btn-primary">SAVE</button>
-</form>
+<div class="panel panel-default" style="width:400px; margin:0 auto;">
+        <form method="POST" class="post-form-blog">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">SAVE</button>
+        </form>
+</div>
 
 {% endblock %}
