--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,11 +1,17 @@
 {% extends 'blog/base.html' %}
 {% block title%} Login {% endblock%}
+{% load crispy_forms_tags %}
 {% block content %}
-    <h2>login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">login</button>
-    </form>
-<p>Don`t have an account?<a href="{% url 'signup'%}">Signup here</a></p>
+<br>
+<div class="panel panel-default" style="width:400px; margin:0 auto;">
+    <h3 style="text-align: center; font-family:sans-serif;">login</h3>
+    <div class="panel-body">
+        <form method="post" class="form-group">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">login</button>
+        </form>
+        <p>Don`t have an account ? <a href="{% url 'signup'%}">Signup here</a></p>
+    </div>
+</div>
 {% endblock%}
