--- a/blog/static/styles/blog.css
+++ b/blog/static/styles/blog.css
@@ -1,43 +1,3 @@
-.content {
-  margin-left: 40px;
+body {
+  padding-top: 70px;
 }
-
-
-h1,
-h2,
-h3,
-h4 {
-  font-size: 30px;
-}
-
-.date {
-  color: #828282;
-}
-
-.post {
-  margin-bottom: 70px;
-}
-.post h1 a {
-  color: #000000;
-}
-.post h1 a:visited {
-  color;
-}
-
-.post-form-blog textarea {
-    width: 100%;
-}
-
-.post-form-blog .btn-primary {
-float: right;
-}
-
-.comment {
-margin: 20px 0px 20px 20px
-}
-
-
-
-
-
-
