--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,16 +1,13 @@
 {% extends 'blog/base.html' %}
 {% block title%} Adding a Comment{% endblock%}
+{% load crispy_forms_tags %}
 {% block content%}
 <div class="panel panel-default" style="width:400px; margin:0 auto;">
     <div class="panel-body">
         <h1 style=" font-family:sans-serif;"> Commenting on</h1>
         <em><p>{{ post.title }}</p></em>
         <hr>
-        <form class="post-form-blog" method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Post comment</button>
-        </form>
+        {% crispy form %}
     </div>
 </div>
 {% endblock %}
