--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,45 +1,98 @@
 {% extends 'blog/base.html' %}
 {% load markdownify %}
 {% block title%}  {{post.title}}  {% endblock%}
+
+{% block nav %}
+  <li>
+    <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa">view drafts</i></a>
+  </li>
+{% endblock%}
 {% block content%}
 
-{% if post.published_date %}
-<div class="post">
-    <div class="date">
-        <p>Published: {{ post.published_date }}</p>
-        {% if post.edited_date%}
-        <p><em> Edited: {{ post.edited_date }} </em></p>
-        {% endif%}
-    </div>
-    
-    {% else %}
-    <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    {% endif %}
-    {% if user.is_authenticated %}
 
-    <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-light"><i class="fa fa-edit" style="color:black;"> Edit</i></a>
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
-        <i class="fas fa-trash-alt" > Delete</i>
-    </a>
-    <hr>
-     {% endif %}
 
-    <h1>{{ post.title }}</h1>
-    <p>{{ post.text | markdown | safe }}</p>
-</div>
-{% if  post.published_date %}
-<a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-light" >Add Comment</a>
+<!--buttons-->
+{% if user.is_authenticated %}
+{% if not post.published_date %}
+ <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+{% endif %}
+<a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-light"><i class="fa fa-edit" style="color:black;"> Edit</i></a>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
+<i class="fas fa-trash-alt" > Delete</i>
+</a>
+<hr>
 {% endif %}
 
+
+<!-- Title -->
+<h1 class="mt-4"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+
+<!-- Author -->
+<p class="lead">
+by
+<a href="#">{{post.author}}</a>
+</p>
+
 <hr>
-  {% for comment in post.comments.all %}
-      {% if user.is_authenticated or comment.approved %}
-            <div class="comment">
-              <div class="date">
-                    {{comment.created_date}}
+<!-- Date/Time -->
+{% if post.published_date %}
+<p> Published: {{ post.published_date }}</p>
+{% if post.edited_date%}
+<p> Edited: {{ post.edited_date }} </p>
+{% endif%} 
+{% endif%}
+
+<hr>
+
+
+
+
+<!-- Preview Image 
+<img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+<hr>
+-->
+
+<!-- Post body -->
+<p class="lead">
+<p>{{ post.text |markdown | safe| truncatechars:50| linebreaksbr }}</p>
+</p>
+
+<hr>
+
+ <!-- Comments Form -->
+ <a href=""></a>
+ {% if  post.published_date %}
+        <div class="card my-4">
+          <h5 class="card-header">Leave a Comment:</h5>
+          <div class="card-body">
+          <form method='post' >
+          {% csrf_token %}
+              <div class="form-group">
+                <textarea class="form-control" rows="3"></textarea>
               </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+        <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-light" >Add Comment</a>
+ {% endif %}
+
+ 
+
+ <!-- Single Comment -->
+ {% for comment in post.comments.all %}
+      {% if user.is_authenticated or comment.approved %}
+        <div class="media mb-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
+            <h5 class="mt-0">{{comment.author}}</h5>
+
+            <h6 class="mt-0">{{comment.created_date}}</h6>
 
             {% if not comment.approved and user.is_superuser %}
                 <a href="{% url 'comment_approve' pk=comment.pk %}"> <i class="fas fa-check"></i></a>
@@ -47,14 +100,16 @@
                 <a href="{% url 'comment_remove' pk=comment.pk %}"><i class="fas fa-trash-alt"></i></a>
             {% endif %}
 
-                <strong><p> {{comment.author}} </p></strong>
-                <p> {{comment.text | markdown | safe |linebreaksbr}} </p>
+             
+            <p> {{comment.text | markdown | safe |linebreaksbr}} </p>
           </div>
-      {% endif %}
+        </div>
+        {% endif %}
 
       {% empty %}
 {% if  post.published_date %}
 <p>No comment yet...</p>
 {% endif %}
 {% endfor %}
+
 {% endblock %}
