--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,191 +2,179 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <title>
+    <title>
       {% block title %} {% endblock%}
     </title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="{% static 'styles/blog.css' %}" />
-  <link rel="stylesheet" href="{% static 'styles/zenburn.css' %}">
-  <link rel="icon" href="static/images/icon.png" sizes="32x32" type="image/png">
     
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'styles/blog.css' %}" />
+    <link rel="icon" href="static/images/icon.png" sizes="32x32" type="image/png">
   </head>
+
   <body>
-  <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
-    <div class="container">
-      <!-- Logo -->
-      <div class="navbar-header">
-        <h1> <a class="navbar-brand" href="{% url 'post_list'%}"><i class="fas fa-feather-alt"></i></i>Wise Programmer Blog</a> </h1>
-      </div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
 
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="nav navbar-nav ml-auto">
-          <form method="get" action="{%url 'search' %}" class="form-inline my-2 my-lg-0  ">
-            <div class="input-group mb-3">
-              <input type="search" name="query" value="{{request.GET.query}}" class="form-control" placeholder="Search post" aria-label="Search post" aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="submit">
-                  <i class="fas fa-search"></i>
-                </button>
+      <div class="container-fluid">
+
+        <!-- Logo -->
+        <div class="navbar-header">
+          <h1> <a class="navbar-brand" href="{% url 'post_list'%}"><i class="fas fa-feather-alt"></i></i>Wise Programmer Blog</a> </h1>
+        </div>
+
+        <!-- toggle button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <!-- search input n button -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="nav navbar-nav ml-auto">
+            <form method="get" action="{%url 'search' %}" class="form-inline my-2 my-lg-0  ">
+              <div class="input-group mb-3">
+                <input type="search" name="query" class="form-control" placeholder="Search post" aria-label="Search post" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="submit">
+                    <i class="fas fa-search"></i>
+                  </button>
+                </div>
               </div>
-            </div>
-          </form>
-        </ul>
-      </div>
+            </form>
+          </ul>
+        </div>
 
-      {% if user.is_authenticated %}
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse " id="collapsibleNavbar">
+          <ul class="nav navbar-nav ml-auto">
+             <a href="{% url 'landing_page'%}" class='nav-link dropdown-toggle btn btn-outline-secondary'>Landing page</a>
+            {% if user.is_authenticated %}
+            {% block nav %} {% endblock%}
+            {% endif %}
+            
+            <li class="nav-item dropdown">
 
-      <div class="collapse navbar-collapse " id="collapsibleNavbar">
-        <ul class="nav navbar-nav ml-auto">
-          {% block nav %} {% endblock%}
-          <li class="nav-item">
-            <div class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                {% if user.is_authenticated %}
+
                 <a class="nav-link" href="{% url 'profile'%}"><i class="far fa-user"></i><br>{{ user.username}}</a>
                 <div class="dropdown-divider"></div>
                 <a class="nav-link" href="{% url 'logout'%}"><i class="fas fa-sign-out-alt fa"></i>Logout</a>
+
+                {% else %}
+
+                <a class="dropdown-item" href="{% url 'login'%}" ><i class="fas fa-sign-in-alt fa"></i>login</a>
+                <div class="dropdown-divider"></div>
+                <h6 class="dropdown-header">Don`t have an account ?</h6>
+                <a class="dropdown-item" href="{% url 'signup'%}" ><i class="fas fa-user-plus"></i> Signup</a>
+
+                {% endif %}
+              </div>
+            </li>  
+          </ul>
+        </div>
+
+      </div>
+    </nav>
+    <!-- Page Content -->
+ 
+    
+    <div class="container main-message ">
+      <!-- 1st ROW Messages-->
+      <div class="row">
+        <!-- Message Content Row -->
+        <div class="col-xs-12 col-sm-10 col-md-5">
+          <!-- 1st colum in ROW 1 -->
+           {% for message in messages %}
+           <div class="panel panel-default text-center">
+             <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                 <span aria-hidden="true">&times;</span>
+                </button>
+                {{ message }}
               </div>
             </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+
+
+    <div class="container main">
+      <div class="row">
+        {% block content%}
+        <!-- 1st colum in ROW 2 (BLOCK CONTENTS)-->
+
+        <!-- ONLY or Whith 2nd colum-->
+
+        <!-- 2st colum in ROW 2 (Widgets)-->
+        <!-- 1st ROW in colum 2,Row 2 (Search Widget) -->
+
+        {% endblock %}
+      </div>
+    </div>
+
+    <br>
+    
+    <!-- Footer -->
+    <footer class=" container-fluid padding bd-footer text-muted">
+      <!-- Footer Elements -->
+      <div class="container-fluid p-3 p-md-5">
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+          <li class="list-inline-item">
+           <a class="btn-floating btn-fb mx-1">
+              <i class="fab fa-facebook-f"> </i>
+           </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-tw mx-1">
+              <i class="fab fa-twitter"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-gplus mx-1">
+              <i class="fab fa-google-plus-g"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-li mx-1">
+              <i class="fab fa-linkedin-in"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-dribbble mx-1">
+              <i class="fab fa-dribbble"> </i>
+            </a>
           </li>
         </ul>
+        <!-- Social buttons -->
       </div>
-
-    {% else %}
-
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'login'%}" >
-                <i class="fas fa-sign-in-alt fa"></i>
-                login
-              </a>
-              <div class="dropdown-divider"></div>
-              <h6 class="dropdown-header">Don`t have an account ?</h6>
-              <a class="dropdown-item" href="{% url 'signup'%}" ><i class="fas fa-user-plus"></i> Signup</a>
-            </div>
-        </li>
-      </ul>
-    </div>
-      {% endif %}
-    </div>
-  </nav>
-<!-- Page Content -->
-<div class="container">
-  <div class="row">
-    <!-- Message Content Column -->
-      <div class="col-lg-8">
-        {% for message in messages %}
-        <div class="panel panel-default">
-          <div class="alert {{ message.tags }} alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-            {{ message }}
-          </div>
-        </div>
-      </div>
-      {% endfor %}
-  </div>
+      <!-- Footer Elements -->
   
-  <div class="row">
-    <!-- Post Content Column -->
-    <div class="col-lg-8">
-      {% block content%}
-    
-      {%endblock%}
-    </div>
-
-    <!-- Sidebar Widgets Column -->
-      <div class="col-md-4">
-
-        <!-- Search Widget -->
-        <div class="card my-4">
-          <h5 class="card-header">Search</h5>
-          <div class="card-body">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search for...">
-              <span class="input-group-btn">
-                <button class="btn btn-secondary" type="button">Go!</button>
-              </span>
-            </div>
-          </div>
-        </div>
-
-<!-- Categories Widget -->
-        <div class="card my-4">
-          <h5 class="card-header">Categories</h5>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="#">Web Design</a>
-                  </li>
-                  <li>
-                    <a href="#">HTML</a>
-                  </li>
-                  <li>
-                    <a href="#">Freebies</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="#">JavaScript</a>
-                  </li>
-                  <li>
-                    <a href="#">CSS</a>
-                  </li>
-                  <li>
-                    <a href="#">Tutorials</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Side Widget -->
-        <div class="card my-4">
-          <h5 class="card-header">Google Ads</h5>
-          <div class="card-body">
-            Wise programmer Django Biginner Course
-          </div>
-        </div>
-
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a href="#"> wiseprogrammer.com</a>
       </div>
+      <!-- Copyright -->
+    </footer>
+ 
+      
+    <!--Scripts -->
 
-    </div>
-  </div>
-</div>
-<br>
-<!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; WiseProgrammer 2019</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+    <!-- /Scripts -->
+  
+  </body>
 </html>
