--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,21 +1,20 @@
-{% extends 'blog/base.html' %}
-{% block title%} {{ post.title }} {% endblock%}
-{% load crispy_forms_tags %}
-{% block nav %}
+{% extends 'blog/base.html' %} {% block title%} {{ post.title }} {% endblock%}
+{% load crispy_forms_tags %} {% block nav %}
 <li class="nav-item active">
-    <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
+  <a class="nav-link" href="{% url 'post_new'%}"
+    ><i class="fa fa-plus">Add post</i></a
+  >
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa">view drafts</i></a>
+  <a class="nav-link" href="{% url 'post_draft_list' %}"
+    ><i class="fas fa-pencil-ruler fa">view drafts</i></a
+  >
 </li>
-{% endblock%}
-{% block content%}
+{% endblock%} {% block content%}
 <div class="panel panel-default" style="width:400px; margin:0 auto;">
-        <form method="POST" class="post-form-blog">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">SAVE</button>
-        </form>
+  <form method="POST" class="post-form-blog">
+    {% csrf_token %} {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">SAVE</button>
+  </form>
 </div>
-
 {% endblock %}
