--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,22 +16,34 @@
 {% block content%}
 
 <div class="col-xs-12 col-sm-10 col-md-8">
+
+
   <br>
   <!--buttons-->
-  <div class="">
+
+<p>
+<button class="btn btn-outline-light"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+<i class="fas fa-caret-down  text-dark" >
+</i>more
+</button>
+{% if not post.published_date %}
+<a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
+{% endif %}
+  
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body button-card  ">
     {% if user.is_authenticated %}
-    {% if not post.published_date %}
-    <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    {% endif %}
-    <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark"><i class="fa fa-edit" > Edit</i></a>
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    
+    <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark"><i class="fa fa-edit" > Edit</i></a>
+  
     <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
     <i class="fas fa-trash-alt" > Delete</i>
     </a>
-    <hr class="my-4">
+
     {% endif %}
   </div>
+</div>
 
   <!--post-->
   <div class="">
@@ -46,23 +58,30 @@
     by {{post.author}}
   </button>
   <div class="dropdown-menu">
-    <a class="dropdown-item" href="#">Email: {{author_details.email}}</a>
-    <a class="dropdown-item" href="#">Total posts: {{author_posts_count}}</a>
-    {% if author_posts %}
+    <a class="dropdown-item" href="#">Mail--> {{author_details.email}}</a>
+    <a class="dropdown-item" href="#">All posts, {{author_posts_count}}</a>
     
-    <a class="dropdown-item" href="#">Post titles:
-    {% for post_title in author_posts %}
-    <li> 
-  <a href="">{{post_title}}</a>
-    
-    
-    </li>
-     {% endfor %}
-     </a>
-    
-    {% endif %}
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Separated link</a>
+    <div class="dropdown-item">
+    
+    {% if author_posts %}
+    <a class="dropdown-item" href="#">{{post.author}}'s Posts
+    <ul>
+    
+    {% for author_posts in author_posts %}
+    
+    {% if author_posts.published_date %}
+    <li>
+      <a class="text-info" href= "{% url 'post_detail' pk=author_posts.pk %}">{{author_posts.title | truncatechars:15}}</a>
+    </li>
+    {% endif %}
+    
+    {% endfor %}
+    
+     </a>
+    </ul>
+    {% endif %}
+    </div>
   </div>
 </div>
     <!-- Date/Time -->
@@ -80,11 +99,9 @@
     <p class="lead">{{ post.text |markdown | safe| linebreaksbr }}</p>
 
   </div>
-
-  <div class="card my-8">
+{% if  post.published_date %}
+  <div class="card my-8 comment-card">
     <!-- Comments Form -->
-    {% if  post.published_date %}
-    
       <h5 class="card-header">leave a comment:</h5>
       {% if user.is_authenticated %}
       <div class="card-body">
@@ -126,14 +143,17 @@
         <h5 class="mt-0">Commenter Name</h5>congue felis in faucibus.
       </div>
     </div>
-  </div>
-  {% endif %}
+    {% endif %}
 
-  {% empty %}
-  {% if  post.published_date %}
-  <p>No comment yet...</p>
-  {% endif %}
-  {% endfor %}
+    {% empty %}
+    {% if  post.published_date %}
+    <div>
+    <p>No comment yet...</p>
+    </div>
+    {% endif %}
+    {% endfor %}
+  </div>
+  
 
 </div>
 {% endblock %}
