Made edit,Login and Signup responsive

--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -2,10 +2,21 @@
 {% block title%} Signup {% endblock%}
 {% load crispy_forms_tags %}
 {% block content %}
-        <div class="panel panel-default" style="width:400px; margin:0 auto;">
-            <h3 style="text-align: center; font-family:sans-serif;">Signup</h3>
-            <div class="panel-body">
-                {% crispy form %}
+<div class="container mt-4 mb-4">
+    <div class="row justify-content-center">
+        <div class="col-md-5 ">
+            <div class="card">
+                <div class="card-body"> 
+                    <h2 class="text-center">Sign up</h2>
+                    <form method="post" class="form-group" novalidate>
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary">Signup</button>
+                    </form>
+                </div> 
             </div>
         </div>
+    </div>  
+</div>   
+  
 {% endblock%}
