--- a/blog/static/styles/blog.css
+++ b/blog/static/styles/blog.css
@@ -1,12 +1,18 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700");
-.main {
-  padding-top: 75px;
-}
 .main-message {
   display: inline-block;
   opacity: 0.7;
 }
 .button-card,
-.comment-card {
+.post-body {
   display: inline-block;
+}
+.asteriskField {
+  display: none;
+}
+form .alert ul li {
+  list-style: none;
+}
+form .alert ul {
+  padding: 0;
+  margin: 0;
 }
