--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,7 @@
     </title>
     
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
@@ -21,9 +21,9 @@
 
   <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top mb-4">
 
-      <div class="container-fluid">
+      <div class="container">
 
         <!-- Logo -->
         <div class="navbar-header">
@@ -38,7 +38,7 @@
         <!-- search input n button -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="nav navbar-nav ml-auto">
-            <form method="get" action="{%url 'search' %}" class="form-inline my-2 my-lg-0  ">
+            <form method="get" action="{%url 'search' %}" class="form-inline my-2  ">
               <div class="input-group mb-3">
                 <input type="search" name="query" class="form-control" placeholder="Search post" aria-label="Search post" aria-describedby="basic-addon2">
                 <div class="input-group-append">
@@ -53,33 +53,30 @@
 
         <!-- Navbar links -->
         <div class="collapse navbar-collapse " id="collapsibleNavbar">
-          <ul class="nav navbar-nav ml-auto">
-             <a href="{% url 'landing_page'%}" class='nav-link dropdown-toggle btn btn-outline-secondary'>Landing page</a>
+          <ul class="nav navbar-nav ml-auto">  
             {% if user.is_authenticated %}
             {% block nav %} {% endblock%}
-            {% endif %}
-            
             <li class="nav-item dropdown">
 
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username}}</a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                {% if user.is_authenticated %}
-
-                <a class="nav-link" href="{% url 'profile'%}"><i class="far fa-user"></i><br>{{ user.username}}</a>
+                <a class="nav-link btn-outline-light" href="{% url 'profile'%}"><i class="far fa-user ">Profile</i></a>
+                
+                <a class="nav-link" href="#">Change password</a>
                 <div class="dropdown-divider"></div>
-                <a class="nav-link" href="{% url 'logout'%}"><i class="fas fa-sign-out-alt fa"></i>Logout</a>
-
-                {% else %}
-
-                <a class="dropdown-item" href="{% url 'login'%}" ><i class="fas fa-sign-in-alt fa"></i>login</a>
-                <div class="dropdown-divider"></div>
-                <h6 class="dropdown-header">Don`t have an account ?</h6>
-                <a class="dropdown-item" href="{% url 'signup'%}" ><i class="fas fa-user-plus"></i> Signup</a>
-
-                {% endif %}
+                <a class="nav-link btn-outline-danger" href="{% url 'logout'%}"><i class="fas fa-sign-out-alt fa"></i>Log out</a>
               </div>
-            </li>  
+            </li> 
           </ul>
+          {% else %}
+
+                <form class="form-inline ">
+                <a href="{% url 'landing_page'%}" class='nav-link dropdown-toggle btn btn-outline-secondary mr-4'>Landing page</a>
+                  <a class="btn btn-outline-secondary mr-4" href="{% url 'login'%}" ><i class="fas fa-sign-in-alt fa"></i>Log in</a>
+                  <a class="btn btn-primary mr-4" href="{% url 'signup'%}" ><i class="fas fa-user-plus"></i> Sign up</a>
+                </form>
+
+                {% endif %} 
         </div>
 
       </div>
@@ -88,7 +85,7 @@
 
     
     
-    <div class="container main">
+    <div class="container mb-4">
       <div class="row">
       {% block content %}
         <!-- 1st colum in ROW 2 (BLOCK CONTENTS)-->
@@ -101,8 +98,6 @@
         {% endblock %}
       </div>
     </div>
-
-    <br>
     
     <!-- Footer -->
     <footer class=" container-fluid padding bd-footer text-muted">
