--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,23 +16,23 @@
 
 {% block content%}
 <!--body-->
-<div class="col-xs-12 col-sm-12 col-md-8">
-  <br>
+<div class="col-xs-12 col-sm-12 col-md-10 col-lg-9 col-xl-8">
+{% include "message.html" %}
 
   <!--buttons-->
   <div>
     <p>
-      <button class="btn btn-outline-light"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      <button class="btn btn-outline-light "data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
         <i class="fas fa-caret-down  text-dark" >
         </i>more
       </button>
       {% if not post.published_date %}
-        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
+        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary mr-2">Publish</a>
       {% endif %} 
     </p>
     <div class="collapse" id="collapseExample">
       <div class="card card-body button-card  ">
-        {% if user.is_authenticated %}
+        {% if user.is_authenticated  %}
         <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark"><i class="fa fa-edit" > Edit</i></a>
         <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
          <i class="fas fa-trash-alt" > Delete</i>
@@ -45,11 +45,11 @@
   <!--post body-->
   <div>
     <!-- Title -->
-    <h1 class="display-4 text-center">{{ post.title }}</h1>
+    <h3 class="">{{ post.title }}</h3>
     
     <!-- Author -->
     <div class="btn-group">
-        <button class="btn btn-outline-light dropdown-toggle text-dark" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="align:center;">
+        <button class=" btn btn-outline-light dropdown-toggle text-dark" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="align:center;">
           by {{post.author}}
         </button>
         <div class="dropdown-menu">
@@ -97,7 +97,7 @@
     </div>
 
     <!-- Post body -->
-    <div class="card card-body ">
+    <div>
       <p class="lead">{{ post.text |markdown | safe| linebreaksbr }}</p>
     </div>
     <br>
@@ -142,6 +142,7 @@
           {% endif %}
           <div> {{comment.text | markdown | safe}} </div>
         </div>
+        
       </div>
       {% endif %}
       {% empty %}
