--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -11,10 +11,19 @@
   >
 </li>
 {% endblock%} {% block content%}
-<div class="panel panel-default" style="width:400px; margin:0 auto;">
-  <form method="POST" class="post-form-blog">
-    {% csrf_token %} {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">SAVE</button>
-  </form>
-</div>
+
+
+
+<div class="container mt-4 mb-4">
+    <div class="row justify-content-center">
+      <div>
+        {% include "message.html" %}
+          <form method="POST" >
+            {% csrf_token %} {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">Save Post</button>
+          </form>
+      </div>
+    </div>
+  </div>  
+
 {% endblock %}
