--- a/blog/templates/message.html
+++ b/blog/templates/message.html
@@ -1,8 +1,14 @@
 {% for message in messages %}
- <div class="alert {{ message.tags }} alert-dismissible fade show main-message" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  {{ message }}
-</div>
+ <div class="container">
+   <div class="row justify-content-center"> 
+     <div>
+       <div class="alert {{ message.tags }} alert-dismissible fade show main-message" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        {{ message }}
+       </div>
+     </div>
+   </div>
+ </div>
 {% endfor %}
