--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -2,17 +2,23 @@
 {% block title%} Login {% endblock%}
 {% load crispy_forms_tags %}
 {% block content %}
-<br>
-<div class="panel panel-default" style="width:400px; margin:0 auto;">
-    <h3 style="text-align: center; font-family:sans-serif;">login</h3>
-    <div class="panel-body">
-        <form method="post" class="form-group">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">login</button>
-        </form>
-        <p>Don`t have an account ? <a href="{% url 'signup'%}">Signup here</a></p>
+<div class="container mt-4 mb-4">
+    <div class="row justify-content-center">
+        <div class="col-md-5 ">
+            <div class="card">
+                <div class="card-body"> 
+                <h2 class="text-center">Log in</h2>
+                    <form method="post" class="form-group" novalidate>
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary mb-2">Log in</button><br>
+                        <a class"btn btn-link" href="#">Forgot your password?</a>
+                    </form>
+                    <hr class"my-4">
+                    <p class="text-center">Don`t have an account ? <a href="{% url 'signup'%}">Signup here</a></p>
+                </div>
+            </div> 
+        </div>
     </div>
 </div>
-
 {% endblock%}
