--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -16,12 +16,16 @@
 
 <div class="container mt-4 mb-4">
     <div class="row justify-content-center">
-      <div class="col-6">
-        {% include "message.html" %}
-          <form method="POST" >
-            {% csrf_token %} {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Save Post</button>
-          </form>
+      <div class="col-xs-12 col-sm-10 col-md-6  ">
+        <div class="card">
+          <div class="card-body">
+            {% include "message.html" %}
+              <form method="POST" >
+                {% csrf_token %} {{ form|crispy }}
+                <button type="submit" class="btn btn-primary">Save Post</button>
+              </form>
+          </div>
+        </div>
       </div>
     </div>
   </div>  
