added change password functionality

--- a/blog/static/styles/blog.css
+++ b/blog/static/styles/blog.css
@@ -6,8 +6,7 @@
 .post-body {
   display: inline-block;
 }
-.asteriskField,
-.requiredField {
+.asteriskField {
   display: none;
 }
 form .alert ul li {
