--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -62,7 +62,7 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="nav-link btn-outline-light" href="{% url 'profile'%}"><i class="far fa-user ">Profile</i></a>
                 
-                <a class="nav-link" href="#">Change password</a>
+                <a class="nav-link" href="{% url 'password_change'%}">Change password</a>
                 <div class="dropdown-divider"></div>
                 <a class="nav-link btn-outline-danger" href="{% url 'logout'%}"><i class="fas fa-sign-out-alt fa"></i>Log out</a>
               </div>
