--- a/blog/templates/registration/password_change_form.html
+++ b/blog/templates/registration/password_change_form.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-{% block title%} Signup {% endblock%}
+{% block title%} Change Your Password {% endblock%}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container mt-4 mb-4">
@@ -7,11 +7,11 @@
         <div class="col-md-5 ">
             <div class="card">
                 <div class="card-body"> 
-                    <h2 class="text-center">Sign up</h2>
+                    <h2 class="text-center">Change Your Password</h2>
                     <form method="post" class="form-group" novalidate>
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button type="submit" class="btn btn-primary">Signup</button>
+                        <button type="submit" class="btn btn-primary">Change Your Password</button>
                     </form>
                 </div> 
             </div>
