--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,7 +17,8 @@
   <!--buttons-->
   <div>
     <p>
-    {% if user.is_authenticated  %}
+    {% if author_name == user_name %}
+    
       <button class="btn btn-outline-light "data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
         <i class="fas fa-caret-down  text-dark" >
         </i>more
@@ -29,11 +30,12 @@
     <div class="collapse" id="collapseExample">
       <div class="card card-body button-card  ">
         
-        <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark"><i class="fa fa-edit" > Edit</i></a>
-        <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
+        <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark" style="border:none;" ><i class="fa fa-edit" > Edit</i></a>
+        <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')" style="border:none;">
          <i class="fas fa-trash-alt" > Delete</i>
         </a>
         {% endif %}
+       
       </div>
     </div>
   </div>
@@ -108,7 +110,7 @@
       <h5 class="card-header">leave a comment:</h5>
       {% if user.is_authenticated %}
       <div class="card-body">
-        <form method="post" class="form-group" action="{% url 'add_comment_to_post' pk=post.pk %}">
+        <form method="post" action="{% url 'add_comment_to_post' pk=post.pk %}">
           {% csrf_token %}
           {{ form|crispy }}
           <button type="submit" class="btn btn-primary">Comment</button>
