--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -44,7 +44,7 @@
     </div>
     
     <!-- Footer -->
-    <footer class=" container-fluid padding bd-footer text-muted">
+    <footer class=" container padding ">
       <!-- Footer Elements -->
       <div class="container-fluid p-3 p-md-5">
         <!-- Social buttons -->
