--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -12,7 +12,7 @@
                 <form method="post" class="form-group" novalidate>
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <a href="#">Forgot password ?</a>
+                        <a href="{% url 'password_reset' %}">Forgot password ?</a>
                         <div class="row justify-content-center">
                             <button type="submit" class="btn btn-primary">Log in</button>
                         </div>
@@ -25,3 +25,7 @@
     </div>
 </div>
 {% endblock%}
+
+
+
+
