made comments to display from the latest to the oldest

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -128,7 +128,7 @@
     <!-- Display comment -->
     {% if post.published_date %}
     <div class="card card-body">
-      {% for comment in post.comments.all %}
+      {% for comment in post.comments.all reversed %}
       {% if user.is_authenticated or comment.approved %}
       <div class="card card-body media-body">
         <div>
