--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,17 +20,17 @@
   </head>
 
   <body>
-   
+   <button class="btn-sm" onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
     {% block mainnav %}
     <!-- Nav bar -->
     <!-- Page Content -->
     {% endblock %}
     
-
     
+    <div class="container mb-4 content">
     
-    <div class="container mb-4">
       <div class="row">
+      
       {% block content %}
         <!-- 1st colum in ROW 2 (BLOCK CONTENTS)-->
 
@@ -88,6 +88,32 @@
  
       
     <!--Scripts -->
+    <script>
+      //Get the button
+      var mybutton = document.getElementById("myBtn");
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function() {scrollFunction()};
+
+      function scrollFunction()
+      {
+        if (document.body.scrollTop > 600 || document.documentElement.scrollTop > 600)
+        {
+          mybutton.style.display = "block";
+        }
+        else
+        {
+          mybutton.style.display = "none";
+        }
+      }
+
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction()
+      {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
+    </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
