--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,7 +11,7 @@
 
 <!-- 1st colum in ROW 2 (BLOCK CONTENTS)-->
 <div class="col-xs-12 col-sm-10 col-md-8">
-{% include "message.html" %}
+  {% include "message.html" %}
  <!--If no posts -->
   {% if not posts %}
   <div class="text-center text-muted my-4">
@@ -25,14 +25,14 @@
 
 
   <!-- Title -->
-<a class="text-decoration-none text-dark" href="{% url 'post_detail' pk=post.pk %}"><h1 class="display-4">{{ post.title }}</h1></a>
+  <a class="text-decoration-none text-dark" href="{% url 'post_detail' pk=post.pk %}"><h1 class="display-4">{{ post.title | truncatechars:30 }}</h1></a>
   
   
 
 
 
   <!-- Date/Time -->
-  <p class="text-muted"> Published: {{ post.published_date }}</p>
+  <p class="text-muted"> Published on {{ post.published_date }}</p>
   {% if post.edited_date%}
   <p class="text-muted"> Edited: {{ post.edited_date }} </p>
   {% endif%}
@@ -45,7 +45,7 @@
 
   <!-- Post body -->
   <p class="lead" id="post_body" value="{{ post.text}}">
-    {{ post.text |markdown | safe| truncatechars:200| linebreaksbr }}
+    {{ post.text |markdown | safe| truncatechars:100| linebreaksbr }}
 
     {% if post.text|length > 200 %}
     <a href="{%url 'post_detail' pk=post.pk%}">See more</a>
@@ -56,7 +56,7 @@
 
   <!--Comment count op a post -->
   <a class="text-info" href="{% url 'post_detail' pk=post.pk%}">Comments: {{ post.approved_comments.count }}</a>
-<hr class="my-4">
+  <hr class="my-4">
   {% endfor %}
   {% endif %}
  
@@ -64,8 +64,7 @@
 
 <div class="col-xs-12 col-sm-6 col-md-4 text-center">
   <i class="fas fa-code"></i>
-    <h3>HTML5</h3>
-    <P>Build with the latest version of HTML</P>
-  </div> 
-</div>
+  <h3>HTML5</h3>
+  <P>Build with the latest version of HTML</P>
+</div> 
 {% endblock %}
