--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top mb-4">
+<nav class="navbar navbar-expand-lg bg-light navbar-light  mb-4">
 
       <div class="container">
 
@@ -42,7 +42,9 @@
 
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username}}</a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="nav-link btn-outline-light" href="{% url 'profile'%}"><i class="far fa-user ">Profile</i></a>
+                <a class="nav-link btn-outline-light" href="{% url 'profile'%}"><i class="far fa-user "> Profile</i></a>
+                <a class="nav-link btn-outline-light" href="{% url 'user_posts'%}"><i class="fas fa-pencil-alt"> My posts</i></a>
+                
                 
                 <a class="nav-link" href="{% url 'password_change'%}">Change password</a>
                 <div class="dropdown-divider"></div>
